log

Wed 13 Mar 2024 08:31:16 PM UTC: 
 tests:  0|7
total_score: 0/70
a6de1ed
Wed 13 Mar 2024 08:39:36 PM UTC: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
a2fdb2f
Wed 13 Mar 2024 08:40:09 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
d26e361
Wed 13 Mar 2024 08:46:25 PM UTC: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
3a78786
Wed 13 Mar 2024 08:55:29 PM UTC: 
 exercises.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
75cbe90
Wed 13 Mar 2024 09:03:34 PM UTC: 
 exercises.c | 31 ++++++++++++++++++++++++++++++-
 1 file changed, 30 insertions(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
4045266
Wed 13 Mar 2024 09:04:58 PM UTC: 
 exercises.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|3
total_score: 40/70
0e3c4cf
Wed 13 Mar 2024 09:15:56 PM UTC: 
 exercises.c | 20 +++++++++++++++++++-
 1 file changed, 19 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘checkSorted’:
exercises.c:125:1: error: control reaches end of non-void function [-Werror=return-type]
  125 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
386d0bd
Wed 13 Mar 2024 09:17:53 PM UTC: 
 exercises.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  0|3
total_score: 40/70
b9d665c
Wed 13 Mar 2024 09:18:33 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|3
total_score: 40/70
7e7f3ad
